--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -1,1 +1,3 @@
 ycom_impersonate_default_id = Standard-Login ID
+ycom_impersonate_title = YCom Impersonate
+ycom_impersonate_Settings = Einstellungen
