--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -1,3 +1,4 @@
 ycom_impersonate_default_id = Standard-Login ID
 ycom_impersonate_title = YCom Impersonate
 ycom_impersonate_settings = Einstellungen
+ycom_impersonate_login_as = Login als: 
