--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -1,5 +1,5 @@
 ycom_impersonate_default_id = Standard-Nutzer:in
-ycom_impersonate_default_id_notice = Hier kann ein YCom-Login gewählt werden welches für alle berechtigten Backendnutzrt gilt. 
+ycom_impersonate_default_id_notice = Hier kann ein YCom-Login gewählt werden welches für alle berechtigten Backend-Nutzer gilt. 
 ycom_impersonate_title = YCom Impersonate
 ycom_impersonate_settings = Einstellungen
 ycom_impersonate_login_as = Login als: 
