--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -4,4 +4,4 @@ ycom_impersonate_title = YCom Impersonate
 ycom_impersonate_settings = Einstellungen
 ycom_impersonate_login_as = Login als: 
 ycom_impersonate_select = Niemand ausgewählt
-
+ycom_impersonate_help = Hilfe
